--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,31 @@
+header
+{
+display: flex;
+flex-direction: column;
+height: 1000px;
+width: 25%;
+background-color: rgb(226, 223, 223);
+}
 header > div > img
 {
-    height: 300px;
+    height: 127px;
     width: 100%;
-    box-shadow: 10px 10px 30px rgb(42, 72, 126);
+    box-shadow: 10px 20px 40px rgb(42, 72, 126);
+    object-fit: cover;
+}
+header > nav 
+{
+
+}
+header > nav > ul
+{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    justify-content: space-around;
+}
+header > nav > ul > li
+{
+    font-size: 50px;
+    color:rgb(42, 72, 126) ;
 }
